feat: task 6 done

--- a/05-merge-styles/test-files/index.html
+++ b/05-merge-styles/test-files/index.html
@@ -11,7 +11,7 @@
   <div class="container nav_container mt-5">
     <div class="col-md-offset-3 col-sm-10 col-md-8 text-center mauto">
        <div class="bg-svg">
-            <svg width="100%" height="100%" viewBox="0 0 1006 830" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="100%" height="100%" viewbox="0 0 1006 830" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="undraw_Tree_swing_646s 1" clip-path="url(#clip0)">
                 <path id="Vector" d="M462.918 28.5253C463.527 29.9749 463.981 31.4902 464.271 33.0436C463.612 30.674 463.095 29.0655 462.918 28.5253Z" fill="#3F3D56"/>
                 <path id="Vector_2" d="M483.784 103.593C483.784 103.593 483.784 105.287 482.031 111.402L483.784 103.593Z" fill="#3F3D56"/>
@@ -81,9 +81,9 @@
                 <path id="leaf12" d="M853.749 362.407C842.251 380.962 820.358 387.514 820.358 387.514C820.358 387.514 817.107 363.984 828.605 345.429C840.103 326.874 861.995 320.321 861.995 320.321C861.995 320.321 865.246 343.852 853.749 362.407Z" fill="#009688"/>
                 </g>
                 <defs>
-                <clipPath id="clip0">
+                <clippath id="clip0">
                 <rect width="1006" height="830" fill="white"/>
-                </clipPath>
+                </clippath>
                 </defs>
                 </svg>
     </div>
